cluster/apps/media-server/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
  namespace: media-server
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app: lidarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lidarr
  template:
    metadata:
      labels:
        app: lidarr
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      containers:
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:2.14.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8686
          resources:
            requests:
              cpu: "50m"
              memory: "128Mi"
            limits:
              memory: "128Mi"
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config-pvc
        - name: data
          persistentVolumeClaim:
            claimName: media-data-pvc
