cluster/apps/media-server/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
  namespace: media-server
spec:
  selector:
    app: gluetun
  ports:
    - name: http
      port: 8686
      targetPort: 8686
